{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 183,
  "lineage": "edae4e90-eb19-78fe-e06b-54b87167ef92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "Dev-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:security-group/sg-0d3e146c5008d8553",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3e146c5008d8553",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "504902624870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-SG"
            },
            "tags_all": {
              "Name": "Dev-SG"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "Management-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:security-group/sg-050b9209b40f81ece",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050b9209b40f81ece",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "504902624870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Management-SG"
            },
            "tags_all": {
              "Name": "Management-SG"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Dev-NAT-Eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d479c35746952f62",
            "domain": "vpc",
            "id": "eipalloc-0d479c35746952f62",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-185-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.185.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Dev-NAT-Eip"
            },
            "tags_all": {
              "Name": "Dev-NAT-Eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Dev-IGW",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Management-NAT-Eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045137dcf2af7a69b",
            "domain": "vpc",
            "id": "eipalloc-045137dcf2af7a69b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-45-82.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.45.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Management-NAT-Eip"
            },
            "tags_all": {
              "Name": "Management-NAT-Eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Management-IGW",
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Dev-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:internet-gateway/igw-0c437c182d6dbe3ed",
            "id": "igw-0c437c182d6dbe3ed",
            "owner_id": "504902624870",
            "tags": {
              "Name": "Dev-IGW"
            },
            "tags_all": {
              "Name": "Dev-IGW"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Management-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:internet-gateway/igw-0b7d80f4df31577d1",
            "id": "igw-0b7d80f4df31577d1",
            "owner_id": "504902624870",
            "tags": {
              "Name": "Management-IGW"
            },
            "tags_all": {
              "Name": "Management-IGW"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Dev-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d479c35746952f62",
            "connectivity_type": "public",
            "id": "nat-05ed1fbec699ce6e0",
            "network_interface_id": "eni-0decc486057469e05",
            "private_ip": "20.100.2.60",
            "public_ip": "3.6.185.65",
            "subnet_id": "subnet-0eedcb3b543723407",
            "tags": {
              "Name": "Dev-NAT"
            },
            "tags_all": {
              "Name": "Dev-NAT"
            }
          },
          "dependencies": [
            "aws_eip.Dev-NAT-Eip",
            "aws_internet_gateway.Dev-IGW",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Management-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045137dcf2af7a69b",
            "connectivity_type": "public",
            "id": "nat-09cb7063281452ab5",
            "network_interface_id": "eni-0624dab80617a427a",
            "private_ip": "30.0.1.135",
            "public_ip": "3.108.45.82",
            "subnet_id": "subnet-01a0b0565cf1e3ba1",
            "tags": {
              "Name": "Management-NAT"
            },
            "tags_all": {
              "Name": "Management-NAT"
            }
          },
          "dependencies": [
            "aws_eip.Management-NAT-Eip",
            "aws_internet_gateway.Management-IGW",
            "aws_subnet.Management-Public-Subnet",
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Dev-Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:route-table/rtb-08c0f84514ebad797",
            "id": "rtb-08c0f84514ebad797",
            "owner_id": "504902624870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05ed1fbec699ce6e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-Private-RT"
            },
            "tags_all": {
              "Name": "Dev-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Dev-NAT-Eip",
            "aws_internet_gateway.Dev-IGW",
            "aws_nat_gateway.Dev-NAT",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Dev-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:route-table/rtb-015319addbef55767",
            "id": "rtb-015319addbef55767",
            "owner_id": "504902624870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c437c182d6dbe3ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-Public-RT"
            },
            "tags_all": {
              "Name": "Dev-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Dev-IGW",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Management-Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:route-table/rtb-0f37278c8a8dbaaa2",
            "id": "rtb-0f37278c8a8dbaaa2",
            "owner_id": "504902624870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09cb7063281452ab5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Management-Private-RT"
            },
            "tags_all": {
              "Name": "Management-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Management-NAT-Eip",
            "aws_internet_gateway.Management-IGW",
            "aws_nat_gateway.Management-NAT",
            "aws_subnet.Management-Public-Subnet",
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Management-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:route-table/rtb-0b0d431fa0472e175",
            "id": "rtb-0b0d431fa0472e175",
            "owner_id": "504902624870",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7d80f4df31577d1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Management-Public-RT"
            },
            "tags_all": {
              "Name": "Management-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Management-IGW",
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e64ecea84f9b6cc",
            "route_table_id": "rtb-08c0f84514ebad797",
            "subnet_id": "subnet-0a6386ce1acfe37d2"
          },
          "dependencies": [
            "aws_eip.Dev-NAT-Eip",
            "aws_internet_gateway.Dev-IGW",
            "aws_nat_gateway.Dev-NAT",
            "aws_route_table.Dev-Private-RT",
            "aws_subnet.Dev-Private-Subnet",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev-Private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a889b84bd3bb6bea",
            "route_table_id": "rtb-08c0f84514ebad797",
            "subnet_id": "subnet-0d04598faa1a08378"
          },
          "dependencies": [
            "aws_eip.Dev-NAT-Eip",
            "aws_internet_gateway.Dev-IGW",
            "aws_nat_gateway.Dev-NAT",
            "aws_route_table.Dev-Private-RT",
            "aws_subnet.Dev-Private-Subnet",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a8d369ce725db43",
            "route_table_id": "rtb-015319addbef55767",
            "subnet_id": "subnet-0e152208be7449730"
          },
          "dependencies": [
            "aws_internet_gateway.Dev-IGW",
            "aws_route_table.Dev-Public-RT",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Dev-Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0692bf632e8afd5fb",
            "route_table_id": "rtb-015319addbef55767",
            "subnet_id": "subnet-0eedcb3b543723407"
          },
          "dependencies": [
            "aws_internet_gateway.Dev-IGW",
            "aws_route_table.Dev-Public-RT",
            "aws_subnet.Dev-Public-Subnet",
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffd57d06d5b74c3f",
            "route_table_id": "rtb-0b0d431fa0472e175",
            "subnet_id": "subnet-01a0b0565cf1e3ba1"
          },
          "dependencies": [
            "aws_internet_gateway.Management-IGW",
            "aws_route_table.Management-Public-RT",
            "aws_subnet.Management-Public-Subnet",
            "aws_vpc.Management-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0213ab71f4181c",
            "route_table_id": "rtb-0b0d431fa0472e175",
            "subnet_id": "subnet-0b448e0dc5232a7c7"
          },
          "dependencies": [
            "aws_internet_gateway.Management-IGW",
            "aws_route_table.Management-Public-RT",
            "aws_subnet.Management-Public-Subnet",
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Dev-Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0a6386ce1acfe37d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6386ce1acfe37d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-1"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0d04598faa1a08378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.100.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04598faa1a08378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Dev-Private-Subnet-2"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Dev-Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0e152208be7449730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e152208be7449730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-1"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0eedcb3b543723407",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eedcb3b543723407",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Dev-Public-Subnet-2"
            },
            "vpc_id": "vpc-093d80db5fda39df1"
          },
          "dependencies": [
            "aws_vpc.Dev-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Management-Private-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0c747f705581be969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c747f705581be969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Management-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Management-Private-Subnet-1"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-01f8f52be122e93f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f8f52be122e93f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Management-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Management-Private-Subnet-2"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Management-Public-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-01a0b0565cf1e3ba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a0b0565cf1e3ba1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Management-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Management-Public-Subnet-1"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:subnet/subnet-0b448e0dc5232a7c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b448e0dc5232a7c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504902624870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Management-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Management-Public-Subnet-2"
            },
            "vpc_id": "vpc-04ef86cb9fc63b250"
          },
          "dependencies": [
            "aws_vpc.Management-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Dev-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:vpc/vpc-093d80db5fda39df1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.100.0.0/16",
            "default_network_acl_id": "acl-0b9d395c931a4e41e",
            "default_route_table_id": "rtb-002faa1d66256d6c1",
            "default_security_group_id": "sg-0d3e146c5008d8553",
            "dhcp_options_id": "dopt-2d11ac46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-093d80db5fda39df1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002faa1d66256d6c1",
            "owner_id": "504902624870",
            "tags": {
              "Name": "Dev-VPC"
            },
            "tags_all": {
              "Name": "Dev-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Management-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:504902624870:vpc/vpc-04ef86cb9fc63b250",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0342fadb55c69cc65",
            "default_route_table_id": "rtb-03016db36339ab1fa",
            "default_security_group_id": "sg-050b9209b40f81ece",
            "dhcp_options_id": "dopt-2d11ac46",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ef86cb9fc63b250",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03016db36339ab1fa",
            "owner_id": "504902624870",
            "tags": {
              "Name": "Management-VPC"
            },
            "tags_all": {
              "Name": "Management-VPC"
            }
          }
        }
      ]
    }
  ]
}